<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="app_logo">app logo</string>
    <string name="desired_league">Desired league</string>
    <string name="mens">mens</string>
    <string name="womens">womens</string>
    <string name="co_ed">co ed</string>
    <string name="next">next</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_team">Find a team in your city and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am">I am a:</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="beginner_bg">beginner_bg</string>
    <string name="search_leagues">Looking for co-ed beginner league near you...</string>
</resources>
