<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.SkillActivity">


    <ImageView
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop" android:layout_width="0dp"
            android:contentDescription="@string/beginner_bg"/>
    <ImageView
            android:layout_width="122dp"
            android:layout_height="39dp"
            app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView4"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/app_logo"/>
    <TextView
            android:text="@string/i_am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white" android:textSize="18sp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/i_am"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView5"
    >
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/beginnerClickBtn" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:textSize="18sp" android:textOff="@string/beginner" android:textOn="@string/beginner"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/beginner" android:onClick="onBeginnerClicked"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ballerClickBtn" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:textSize="18sp" android:textOff="@string/baller" android:textOn="@string/baller"
                android:layout_marginLeft="16dp"
                android:contentDescription="@string/baller" android:onClick="onBallerClicked"/>
    </LinearLayout>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/skillFinishBtn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat" android:textSize="14sp" android:background="@drawable/swoosh_button"
            android:contentDescription="@string/finish" android:onClick="onSkillFinishClicked"/>

</androidx.constraintlayout.widget.ConstraintLayout>
