<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.WelcomeActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.0"/>
    <android.support.constraint.Barrier
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/barrier"
            app:barrierDirection="left"/>
    <ImageView
            android:layout_width="416dp"
            android:layout_height="664dp"
            app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="125dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView4"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/app_logo"/>
    <TextView
            android:text="@string/go_all_in"
            android:layout_width="305dp"
            android:layout_height="69dp"
            android:id="@+id/textView"
            android:textColor="@android:color/white"
            tools:fontFamily="@font/montserrat"
            android:textSize="46sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.497"
            android:textAlignment="center"
            android:textStyle="bold"
            android:contentDescription="@string/go_all_in"/>
    <TextView
            android:text="@string/on_going_all_out"
            android:layout_width="276dp"
            android:layout_height="46dp"
            android:id="@+id/textView2" android:textSize="26sp"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:textStyle="bold" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/barrier" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline" app:layout_constraintHorizontal_bias="0.621"
            android:contentDescription="@string/on_going_all_out"/>
    <TextView
            android:text="@string/find_team"
            android:layout_width="298dp"
            android:layout_height="57dp"
            android:id="@+id/textView3" android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textAlignment="center" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/barrier" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline" app:layout_constraintHorizontal_bias="0.536"
            android:fontFamily="@font/montserrat"
            android:contentDescription="@string/find_team"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="392dp"
            android:layout_height="51dp"
            android:id="@+id/getStartedButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:textSize="16sp" android:fontFamily="@font/montserrat" android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" android:background="@drawable/swoosh_button"
            android:contentDescription="@string/get_started"/>

</android.support.constraint.ConstraintLayout>